k8s/base/istio/peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: lsd-payments
spec:
  mtls:
    mode: STRICT
